# wordle-rust-bot

./: Cargo.toml  README.md  german.txt  lordle.txt
src/: game.rs  main.rs  pattern.rs  word.rs
