[package]
name = "wordl-rust-bot"
description = "A program to solve wordle for you!"
authors = ['Jakob Teuber']
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
rayon = "1.10.0"
rand = "0.8.5"
clap = { version = "4.5.20", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
